tests/ui/bad-not.stderr
error: expected `(` after `not`
 --> tests/ui/bad-not.rs:1:25
  |
1 | #[rustversion_msrv::any(not)]
  |                         ^^^

error: expected `(`
 --> tests/ui/bad-not.rs:4:28
  |
4 | #[rustversion_msrv::any(not, not)]
  |                            ^
